--- a/about.html
+++ b/about.html
@@ -33,17 +33,17 @@
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
-	      <div class="collapse navbar-collapse" id="ftco-nav">
-	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item"><a href="program.html" class="nav-link">Program</a></li>
-	          <li class="nav-item"><a href="coaches.html" class="nav-link">Coaches</a></li>
-	          <li class="nav-item"><a href="schedule.html" class="nav-link">Schedule</a></li>
-	          <li class="nav-item active"><a href="about.html" class="nav-link">About</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>          
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-	        </ul>
-	      </div>
+			<div class="collapse navbar-collapse" id="ftco-nav">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item active"><a href="index.html" class="nav-link">主页</a></li>
+					<li class="nav-item"><a href="program.html" class="nav-link">购买指南</a></li>
+					<li class="nav-item"><a href="coaches.html" class="nav-link">配置选择</a></li>
+					<li class="nav-item"><a href="schedule.html" class="nav-link">购买过程</a></li>
+					<li class="nav-item"><a href="about.html" class="nav-link">展示区</a></li>
+					<li class="nav-item"><a href="blog.html" class="nav-link">社区</a></li>
+					<li class="nav-item"><a href="contact.html" class="nav-link">联系方式</a></li>
+				</ul>
+			</div>
 		  </div>
 	  </nav>
     <!-- END nav -->
