--- a/program.html
+++ b/program.html
@@ -33,17 +33,17 @@
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
-	      <div class="collapse navbar-collapse" id="ftco-nav">
-	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item active"><a href="program.html" class="nav-link">Program</a></li>
-	          <li class="nav-item"><a href="coaches.html" class="nav-link">Coaches</a></li>
-	          <li class="nav-item"><a href="schedule.html" class="nav-link">Schedule</a></li>
-	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>         
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-	        </ul>
-	      </div>
+			<div class="collapse navbar-collapse" id="ftco-nav">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item active"><a href="index.html" class="nav-link">主页</a></li>
+					<li class="nav-item"><a href="program.html" class="nav-link">购买指南</a></li>
+					<li class="nav-item"><a href="coaches.html" class="nav-link">配置选择</a></li>
+					<li class="nav-item"><a href="schedule.html" class="nav-link">购买过程</a></li>
+					<li class="nav-item"><a href="about.html" class="nav-link">展示区</a></li>
+					<li class="nav-item"><a href="blog.html" class="nav-link">社区</a></li>
+					<li class="nav-item"><a href="contact.html" class="nav-link">联系方式</a></li>
+				</ul>
+			</div>
 		  </div>
 	  </nav>
     <!-- END nav -->
@@ -75,53 +75,53 @@
 	            <p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 	          </div>
     			</div>
-    			<div class="col-md-6">
-    				<div class="program d-flex ftco-animate">
-							<div class="icon d-flex justify-content-center align-items-center">
-								<span class="flaticon-gym"></span>
-							</div>
-							<div class="text ml-5">
-								<h3>Body Building</h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-							</div>
-  					</div>
-  					<div class="program d-flex ftco-animate">
-							<div class="icon d-flex justify-content-center align-items-center">
-								<span class="flaticon-woman"></span>
-							</div>
-							<div class="text ml-5">
-								<h3>Aerobic Classes</h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-							</div>
-  					</div>
-  					<div class="program d-flex ftco-animate">
-							<div class="icon d-flex justify-content-center align-items-center">
-								<span class="flaticon-workout"></span>
-							</div>
-							<div class="text ml-5">
-								<h3>Weight Lifting</h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-							</div>
-  					</div>
-  					<div class="program d-flex ftco-animate">
-							<div class="icon d-flex justify-content-center align-items-center">
-								<span class="flaticon-meditation"></span>
-							</div>
-							<div class="text ml-5">
-								<h3>Yoga Classes</h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-							</div>
-  					</div>
-  					<div class="program d-flex ftco-animate">
-							<div class="icon d-flex justify-content-center align-items-center">
-								<span class="flaticon-stationary-bike"></span>
-							</div>
-							<div class="text ml-5">
-								<h3>Cardio Training</h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-							</div>
-  					</div>
-    			</div>
+    			<!--<div class="col-md-6">-->
+    				<!--<div class="program d-flex ftco-animate">-->
+							<!--<div class="icon d-flex justify-content-center align-items-center">-->
+								<!--<span class="flaticon-gym"></span>-->
+							<!--</div>-->
+							<!--<div class="text ml-5">-->
+								<!--<h3>Body Building</h3>-->
+								<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>-->
+							<!--</div>-->
+  					<!--</div>-->
+  					<!--<div class="program d-flex ftco-animate">-->
+							<!--<div class="icon d-flex justify-content-center align-items-center">-->
+								<!--<span class="flaticon-woman"></span>-->
+							<!--</div>-->
+							<!--<div class="text ml-5">-->
+								<!--<h3>Aerobic Classes</h3>-->
+								<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>-->
+							<!--</div>-->
+  					<!--</div>-->
+  					<!--<div class="program d-flex ftco-animate">-->
+							<!--<div class="icon d-flex justify-content-center align-items-center">-->
+								<!--<span class="flaticon-workout"></span>-->
+							<!--</div>-->
+							<!--<div class="text ml-5">-->
+								<!--<h3>Weight Lifting</h3>-->
+								<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>-->
+							<!--</div>-->
+  					<!--</div>-->
+  					<!--<div class="program d-flex ftco-animate">-->
+							<!--<div class="icon d-flex justify-content-center align-items-center">-->
+								<!--<span class="flaticon-meditation"></span>-->
+							<!--</div>-->
+							<!--<div class="text ml-5">-->
+								<!--<h3>Yoga Classes</h3>-->
+								<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>-->
+							<!--</div>-->
+  					<!--</div>-->
+  					<!--<div class="program d-flex ftco-animate">-->
+							<!--<div class="icon d-flex justify-content-center align-items-center">-->
+								<!--<span class="flaticon-stationary-bike"></span>-->
+							<!--</div>-->
+							<!--<div class="text ml-5">-->
+								<!--<h3>Cardio Training</h3>-->
+								<!--<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>-->
+							<!--</div>-->
+  					<!--</div>-->
+    			<!--</div>-->
     		</div>
     	</div>
     </section>
